syntax = "proto3";

package opencv;

message OcvMat {
    int32 rows = 1;
    int32 cols = 2;
    int32 mat_data_type = 3;
    int32 mat_data_size = 4;
    bytes mat_data = 5;
}